--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8467949914954619"
-    crossorigin="anonymous"></script><title>React App</title>
+<title>React App</title>
   </head>
   <body>
 
