--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
+<!DOCTYPE html>
+ <html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
   <script type="module" src="/src/index.tsx"></script>
 </body>
+</html>
